change binds and xdg script

--- a/configs/dotconfig/hypr/main/binds.conf
+++ b/configs/dotconfig/hypr/main/binds.conf
@@ -13,7 +13,11 @@ $SCRIPT_PATH=/home/$USER/.config/scripts
 
 ### BINDS ###
 
+# global pass binds
 # app binds
+bind=SUPER,F10,pass,([tT]eam[sS]peak||[dD]iscord)
+bind=SUPER,F11,pass,([tT]eam[sS]peak||[dD]iscord)
+
 bind=SUPER,Return,exec,kitty
 bind=SUPER,Q,exec,thunar
 bind=SUPER,D,exec,eww open-many --toggle dashboard
@@ -26,6 +30,8 @@ bind=SUPERSHIFT,A,exec,rofi -show calc
 # wm mod binds
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
+bind=SUPER,mouse_down,workspace,e-1
+bind=SUPER,mouse_up,workspace,e+1
 bind=SUPER,B,bringactivetotop
 bind=SUPERSHIFT,C,killactive
 bind=SUPERSHIFT,R,exec,hyprctl reload
@@ -38,13 +44,14 @@ bind=SUPER,left,movefocus,l
 bind=SUPER,right,movefocus,r
 bind=SUPER,up,movefocus,u
 bind=SUPER,down,movefocus,d
-bind=SUPER,1,workspace,1
-bind=SUPER,2,workspace,2
-bind=SUPER,3,workspace,3
-bind=SUPER,4,workspace,4
-bind=SUPER,5,workspace,5
 bind=SUPERCTRL,right,movecurrentworkspacetomonitor,r
 bind=SUPERCTRL,left,movecurrentworkspacetomonitor,l
+bind=SUPERCTRL,right,movecurrentworkspacetomonitor,r
+bind=SUPERCTRL,left,movecurrentworkspacetomonitor,l
+binde=SUPERALT,left,resizeactive,-30 0
+binde=SUPERALT,right,resizeactive,30 0
+binde=SUPERALT,up,resizeactive,0 -30
+binde=SUPERALT,down,resizeactive,0 30
 bind=SUPERSHIFT,left,movewindow,l
 bind=SUPERSHIFT,right,movewindow,r
 bind=SUPERSHIFT,up,movewindow,u
@@ -54,14 +61,19 @@ bind=SUPERSHIFT,2,movetoworkspacesilent,2
 bind=SUPERSHIFT,3,movetoworkspacesilent,3
 bind=SUPERSHIFT,4,movetoworkspacesilent,4
 bind=SUPERSHIFT,5,movetoworkspacesilent,5
+bind=SUPER,1,workspace,1
+bind=SUPER,2,workspace,2
+bind=SUPER,3,workspace,3
+bind=SUPER,4,workspace,4
+bind=SUPER,5,workspace,5
 
 # media keys
 bind=,XF86Calculator,exec,rofi -show calc
-bind=,XF86AudioLowerVolume,exec,$SCRIPT_PATH/volume.sh sink-incr "-" "2"
-bind=,XF86AudioRaiseVolume,exec,$SCRIPT_PATH/volume.sh sink-incr "+" "2"
+binde=,XF86AudioLowerVolume,exec,$SCRIPT_PATH/volume.sh sink-incr "-" "2"
+binde=,XF86AudioRaiseVolume,exec,$SCRIPT_PATH/volume.sh sink-incr "+" "2"
 bind=,XF86AudioMute,exec,$SCRIPT_PATH/volume.sh sink-mute
 bind=,XF86AudioNext,exec,$SCRIPT_PATH/media.sh next
 bind=,XF86AudioPrev,exec,$SCRIPT_PATH/media.sh prev
 bind=,XF86AudioPlay,exec,$SCRIPT_PATH/media.sh pp
-bind=,XF86MonBrightnessDown,exec,$SCRIPT_PATH/brightness.sh down
-bind=,XF86MonBrightnessUp,exec,$SCRIPT_PATH/brightness.sh up
+binde=,XF86MonBrightnessDown,exec,$SCRIPT_PATH/brightness.sh down
+binde=,XF86MonBrightnessUp,exec,$SCRIPT_PATH/brightness.sh up
