--- a/configs/dotconfig/hypr/main/exec.conf
+++ b/configs/dotconfig/hypr/main/exec.conf
@@ -8,8 +8,8 @@
 ### AUTOSTART ###
 
 # system
-exec-once=systemctl --user import-environment DBUS_SESSION_BUS_ADDRESS DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP XDG_SESSION_DESKTOP XAUTHORITY
-exec-once=dbus-update-activation-environment --systemd DBUS_SESSION_BUS_ADDRESS DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP XDG_SESSION_DESKTOP XAUTHORITY
+exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=/home/$USER/.config/hypr/scripts/xdg-portal.sh
 exec-once=/home/$USER/.config/hypr/scripts/theme.sh
 # user specific
