update gtk settings

--- a/configs/dotconfig/gtk-3.0/settings.ini
+++ b/configs/dotconfig/gtk-3.0/settings.ini
@@ -1,7 +1,18 @@
 [Settings]
-gtk-theme-name = 'Orchis-Dark'
-gtk-icon-theme-name = 'Papirus-Dark'
-gtk-font-name = 'Open Sans 11'
-gtk-cursor-theme-name = XCursor-Pro-Dark
-gtk-cursor-theme-size = 4
-gtk-application-prefer-dark-theme = true
+gtk-theme-name=Orchis-Dark
+gtk-icon-theme-name=Papirus-Dark
+gtk-font-name=Open Sans 11
+gtk-cursor-theme-name=XCursor-Pro-Dark
+gtk-cursor-theme-size=4
+gtk-application-prefer-dark-theme=1
+gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
+gtk-toolbar-icon-size=GTK_ICON_SIZE_SMALL_TOOLBAR
+gtk-button-images=0
+gtk-menu-images=0
+gtk-enable-event-sounds=0
+gtk-enable-input-feedback-sounds=0
+gtk-xft-antialias=1
+gtk-xft-hinting=1
+gtk-xft-hintstyle=hintslight
+gtk-xft-rgba=rgb
+gtk-decoration-layout=0
