--- a/configs/dotconfig/hypr/main/main.conf
+++ b/configs/dotconfig/hypr/main/main.conf
@@ -16,43 +16,56 @@ source=./exec.conf
 input {
 	touchpad {
         natural_scroll=no
+        disable_while_typing=true
+        
     }
     kb_layout=de
     kb_variant=nodeadkeys
+    repeat_delay=500
+    repeat_rate=25
     follow_mouse=1
     numlock_by_default=true
     sensitivity=0
     accel_profile=flat
-    force_no_accel=true
+    force_no_accel=false
     natural_scroll=false
+}
+
+gestures {
+    workspace_swipe=true
+    workspace_swipe_create_new=true
 }
 
 general {
     gaps_in=4
     gaps_out=8
     border_size=2
-    col.active_border=$NRM $NRM $ACT $NRM $NRM 35deg
-    col.inactive_border=0x00FFFFFF
+    col.active_border=$ACT
+    col.inactive_border=$NRM
     apply_sens_to_raw=false
     sensitivity=1
 }
 
 decoration {
     rounding=8
+    multisample_edges=true
     blur=true
     blur_size=4
     blur_passes=1
-    blur_new_optimizations=1
+    blur_xray=true
+    blur_ignore_opacity=false
+    blur_new_optimizations=true
     drop_shadow=false
+    dim_inactive=false
 }
 
 animations {
     enabled=true
-    bezier=overshoot,0.05,0.9,0.05,1.05
-    animation=windows,1,4,overshoot,slide
-    animation=workspaces,1,4,overshoot,slide
-    animation=border,1,4,default
-    animation=fade,1,4,default
+    bezier=bezy,0.15,0.7,0.08,1.0
+    animation=windows,1,4,bezy,slide
+    animation=workspaces,1,4,bezy,slide
+    animation=border,1,4,bezy
+    animation=fade,1,4,bezy
 }
 
 dwindle {
@@ -64,13 +77,18 @@ dwindle {
     split_width_multiplier=1.0
 }
 
-gestures {
-    workspace_swipe=true
-}
-
 misc {
-    no_vfr=true
+    #vfr=true
+    #vrr=2
+    layers_hog_keyboard_focus=true
+    hide_cursor_on_touch=false
     mouse_move_enables_dpms=true
+    #mouse_move_focuses_monitor=true
     enable_swallow=false
     swallow_regex=^(kitty)$
+}
+
+binds {
+    focus_preferred_method=1
+    scroll_event_delay=250
 }
