--- a/configs/dotconfig/hypr/main/main.conf
+++ b/configs/dotconfig/hypr/main/main.conf
@@ -17,7 +17,6 @@ input {
 	touchpad {
         natural_scroll=no
         disable_while_typing=true
-        
     }
     kb_layout=de
     kb_variant=nodeadkeys
@@ -41,9 +40,13 @@ general {
     gaps_out=8
     border_size=2
     col.active_border=$ACT
-    col.inactive_border=$NRM
+    col.inactive_border=$BGD
+    col.group_border=$BGD
+    col.group_border_active=$ACT
     apply_sens_to_raw=false
     sensitivity=1
+    resize_on_border=true
+    extend_border_grab_area=15
 }
 
 decoration {
@@ -78,12 +81,12 @@ dwindle {
 }
 
 misc {
-    #vfr=true
-    #vrr=2
+    vfr=true
+    vrr=2
     layers_hog_keyboard_focus=true
     hide_cursor_on_touch=false
     mouse_move_enables_dpms=true
-    #mouse_move_focuses_monitor=true
+    mouse_move_focuses_monitor=true
     enable_swallow=false
     swallow_regex=^(kitty)$
 }
