update hyprland settings and wallpaper setting

--- a/configs/dotconfig/hypr/main/main.conf
+++ b/configs/dotconfig/hypr/main/main.conf
@@ -39,14 +39,16 @@ general {
     gaps_in=4
     gaps_out=8
     border_size=2
+    no_border_on_floating=false
     col.active_border=$ACT
-    col.inactive_border=$BGD
-    col.group_border=$BGD
+    col.inactive_border=0x00000000
+    col.group_border=0x00000000
     col.group_border_active=$ACT
     apply_sens_to_raw=false
     sensitivity=1
-    resize_on_border=true
+    resize_on_border=false
     extend_border_grab_area=15
+    layout=dwindle
 }
 
 decoration {
@@ -55,17 +57,20 @@ decoration {
     blur=true
     blur_size=4
     blur_passes=1
-    blur_xray=true
+    blur_xray=false
     blur_ignore_opacity=false
     blur_new_optimizations=true
     drop_shadow=false
-    dim_inactive=false
+    dim_inactive=true
+    dim_strength=0.25
+    active_opacity=1.0
+    inactive_opacity=1.0
 }
 
 animations {
     enabled=true
     bezier=bezy,0.15,0.7,0.08,1.0
-    animation=windows,1,4,bezy,slide
+    animation=windows,1,4,bezy,popin
     animation=workspaces,1,4,bezy,slide
     animation=border,1,4,bezy
     animation=fade,1,4,bezy
