hyprland disable float animate

--- a/configs/dotconfig/hypr/main/main.conf
+++ b/configs/dotconfig/hypr/main/main.conf
@@ -90,6 +90,8 @@ misc {
     vrr=1
     layers_hog_keyboard_focus=true
     hide_cursor_on_touch=false
+    animate_manual_resizes=false
+    animate_mouse_windowdragging=false
     mouse_move_enables_dpms=true
     mouse_move_focuses_monitor=true
     enable_swallow=false
