update eww and remove rounding

--- a/configs/dotconfig/hypr/main/main.conf
+++ b/configs/dotconfig/hypr/main/main.conf
@@ -52,7 +52,7 @@ general {
 }
 
 decoration {
-    rounding=8
+    rounding=0
     multisample_edges=true
     blur=true
     blur_size=4
@@ -61,7 +61,7 @@ decoration {
     blur_ignore_opacity=false
     blur_new_optimizations=true
     drop_shadow=false
-    dim_inactive=true
+    dim_inactive=false
     dim_strength=0.25
     active_opacity=1.0
     inactive_opacity=1.0
