--- a/configs/dotconfig/hypr/main/exec.conf
+++ b/configs/dotconfig/hypr/main/exec.conf
@@ -7,12 +7,11 @@
 
 ### AUTOSTART ###
 
-# initial
 exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=/home/$USER/.config/hypr/scripts/xdg-portal.sh
-exec-once=/home/$USER/.config/hypr/scripts/theme.sh
-# specific
+exec-once=nwg-look -a
+exec-once=hyprctl setcursor XCursor-Pro-Dark 4
 exec-once=/usr/lib/xfce-polkit/xfce-polkit
 exec-once=easyeffects --gapplication-service
 exec=/home/$USER/.config/hypr/scripts/autostart.sh
