update bashrc and keybinds

--- a/configs/dotconfig/hypr/main/binds.conf
+++ b/configs/dotconfig/hypr/main/binds.conf
@@ -51,6 +51,10 @@ binde=SUPERALT,left,resizeactive,-30 0
 binde=SUPERALT,right,resizeactive,30 0
 binde=SUPERALT,up,resizeactive,0 -30
 binde=SUPERALT,down,resizeactive,0 30
+binde=SUPERALTSHIFT,left,moveactive,-30 0
+binde=SUPERALTSHIFT,right,moveactive,30 0
+binde=SUPERALTSHIFT,up,moveactive,0 -30
+binde=SUPERALTSHIFT,down,moveactive,0 30
 bind=SUPERSHIFT,left,movewindow,l
 bind=SUPERSHIFT,right,movewindow,r
 bind=SUPERSHIFT,up,movewindow,u
