remove gtk conf folder and edit electron flags

--- a/configs/dotconfig/electron-flags.conf
+++ b/configs/dotconfig/electron-flags.conf
@@ -1,7 +1,6 @@
---disable-software-rasterizer
---enable-features=VaapiVideoDecoder
+--ignore-gpu-blocklist
 --enable-accelerated-video
---ignore-gpu-blacklist
+--enable-features=VaapiVideoDecoder
 --enable-gpu-rasterization
 --enable-features=WaylandWindowDecorations
 --ozone-platform-hint=auto
