--- a/configs/dotconfig/hypr/lib/binds.conf
+++ b/configs/dotconfig/hypr/lib/binds.conf
@@ -15,8 +15,8 @@ $SCRIPT_PATH=/home/$USER/.config/scripts
 
 # global pass binds
 # app binds
-bind=SUPER,F10,pass,([tT]eam[sS]peak||[dD]iscord)
-bind=SUPER,F11,pass,([tT]eam[sS]peak||[dD]iscord)
+bind=SUPER,F10,pass,()
+bind=SUPER,F11,pass,()
 bind=SUPER,Return,exec,kitty
 bind=SUPER,Q,exec,thunar
 bind=SUPER,D,exec,eww open-many --toggle dashboard
