update pacman conf

--- a/configs/etc/pacman.conf
+++ b/configs/etc/pacman.conf
@@ -21,25 +21,22 @@ RemoteFileSigLevel = Required
 
 # REPOSITORIES
 
-#[testing]
+#[core-testing]
 #Include = /etc/pacman.d/mirrorlist
 
-#[staging]
+#[core-staging]
 #Include = /etc/pacman.d/mirrorlist
 
 [core]
 Include = /etc/pacman.d/mirrorlist
 
+#[extra-testing]
+#Include = /etc/pacman.d/mirrorlist
+
+#[extra-staging]
+#Include = /etc/pacman.d/mirrorlist
+
 [extra]
-Include = /etc/pacman.d/mirrorlist
-
-#[community-testing]
-#Include = /etc/pacman.d/mirrorlist
-
-#[community-staging]
-#Include = /etc/pacman.d/mirrorlist
-
-[community]
 Include = /etc/pacman.d/mirrorlist
 
 #[multilib-testing]
