update starship and pipewire configs

--- a/configs/dotconfig/starship.toml
+++ b/configs/dotconfig/starship.toml
@@ -15,6 +15,8 @@ error_symbol = "[❯](bold #ffffff)"
 style = "italic bold"
 home_symbol = "~"
 read_only = ""
+truncation_length = 2
+truncation_symbol = '../'
 
 [cmd_duration]
 format = "\n[$duration]($style)\n"
