--- a/configs/dotconfig/hypr/lib/main.conf
+++ b/configs/dotconfig/hypr/lib/main.conf
@@ -69,17 +69,22 @@ decoration {
 
 animations {
     enabled=true
-    bezier=bezy,0.15,0.7,0.08,1.0
-    animation=windows,1,4,bezy,popin
-    animation=workspaces,1,4,bezy,slide
-    animation=border,1,4,bezy
-    animation=fade,1,4,bezy
+    bezier=overshoot,0.05,0.9,0.1,1.05
+    bezier=smoothOut,0.36,0,0.66,-0.56
+    bezier=smoothIn,0.25,1,0.5,1
+    animation=windows,1,4,overshoot,popin
+    animation=windowsOut,1,4,smoothOut,popin
+    animation=windowsMove,1,4,default
+    animation=border,1,8,default
+    animation=fade,1,8,smoothIn
+    animation=fadeDim,1,8,smoothIn
+    animation=workspaces,1,4,default
 }
 
 dwindle {
     pseudotile=false
     preserve_split=true
-    no_gaps_when_only=false
+    no_gaps_when_only=true
     use_active_for_splits=true
     special_scale_factor=0.8
     split_width_multiplier=1.0
