--- a/configs/dotconfig/hypr/lib/main.conf
+++ b/configs/dotconfig/hypr/lib/main.conf
@@ -36,8 +36,8 @@ gestures {
 }
 
 general {
-    gaps_in=4
-    gaps_out=8
+    gaps_in=3
+    gaps_out=6
     border_size=2
     no_border_on_floating=false
     col.active_border=$ACT
@@ -69,22 +69,20 @@ decoration {
 
 animations {
     enabled=true
-    bezier=overshoot,0.05,0.9,0.1,1.05
-    bezier=smoothOut,0.36,0,0.66,-0.56
-    bezier=smoothIn,0.25,1,0.5,1
-    animation=windows,1,4,overshoot,popin
-    animation=windowsOut,1,4,smoothOut,popin
+    bezier=norm,0.05,0.9,0.1,1
+    bezier=out,0.3,0,0.6,-0.2
+    bezier=in,0.3,1,0.5,1
+    animation=windows,1,4,norm,popin
+    animation=windowsOut,1,4,out,popin
     animation=windowsMove,1,4,default
-    animation=border,1,8,default
-    animation=fade,1,8,smoothIn
-    animation=fadeDim,1,8,smoothIn
-    animation=workspaces,1,4,default
+    animation=fade,1,4,in
+    animation=workspaces,1,4,norm,slide
 }
 
 dwindle {
     pseudotile=false
     preserve_split=true
-    no_gaps_when_only=true
+    no_gaps_when_only=false
     use_active_for_splits=true
     special_scale_factor=0.8
     split_width_multiplier=1.0
@@ -98,6 +96,7 @@ misc {
     animate_manual_resizes=false
     animate_mouse_windowdragging=false
     mouse_move_enables_dpms=true
+    key_press_enables_dpms=true
     mouse_move_focuses_monitor=true
     enable_swallow=false
     swallow_regex=^(kitty)$
@@ -105,5 +104,4 @@ misc {
 
 binds {
     focus_preferred_method=1
-    scroll_event_delay=250
 }
