--- a/configs/dotconfig/hypr/lib/binds.conf
+++ b/configs/dotconfig/hypr/lib/binds.conf
@@ -15,7 +15,7 @@ $SCRIPT_PATH=/home/$USER/.config/scripts
 
 # app binds
 bind=SUPER,Return,exec,kitty
-bind=SUPER,Q,exec,nautilus -w
+bind=SUPER,Q,exec,caja
 bind=SUPER,D,exec,eww open-many --toggle dashboard
 bind=SUPER,A,exec,rofi -show run
 bind=SUPER,L,exec,$WAY_SCRIPT_PATH/swaylock.sh
