update hyprland and scripts

--- a/configs/dotconfig/hypr/lib/main.conf
+++ b/configs/dotconfig/hypr/lib/main.conf
@@ -20,7 +20,7 @@ input {
     }
     kb_layout=de
     kb_variant=nodeadkeys
-    repeat_delay=500
+    repeat_delay=300
     repeat_rate=25
     follow_mouse=1
     numlock_by_default=true
@@ -54,17 +54,21 @@ general {
 decoration {
     rounding=0
     multisample_edges=true
-    blur=true
-    blur_size=4
-    blur_passes=1
-    blur_xray=false
-    blur_ignore_opacity=false
-    blur_new_optimizations=true
     drop_shadow=false
     dim_inactive=false
     dim_strength=0.25
     active_opacity=1.0
     inactive_opacity=1.0
+    blur {
+        enabled=true
+        size=8
+        passes=1
+        new_optimizations=true
+        xray=false
+        noise=0.05
+        contrast=0.8
+        brightness=0.8
+    }
 }
 
 animations {
@@ -89,6 +93,8 @@ dwindle {
 }
 
 misc {
+    disable_hyprland_logo=true
+    disable_splash_rendering=true
     vfr=true
     vrr=1
     layers_hog_keyboard_focus=true
@@ -104,4 +110,15 @@ misc {
 
 binds {
     focus_preferred_method=1
+}
+
+xwayland {
+    use_nearest_neighbor=false
+    force_zero_scaling=false
+}
+
+debug {
+    overlay=false
+    damage_blink=false
+    disable_logs=false
 }
