update hyprland and kitty

--- a/configs/dotconfig/hypr/lib/main.conf
+++ b/configs/dotconfig/hypr/lib/main.conf
@@ -18,15 +18,14 @@ input {
         natural_scroll=no
         disable_while_typing=true
     }
-    kb_layout=de
-    kb_variant=nodeadkeys
-    repeat_delay=300
-    repeat_rate=25
-    follow_mouse=1
-    numlock_by_default=true
     sensitivity=0
+    follow_mouse=1
+    repeat_rate=25
+    repeat_delay=300
     accel_profile=flat
-    force_no_accel=false
+    kb_layout=at
+    kb_variant=nodeadkeys
+    numlock_by_default=true
     natural_scroll=false
 }
 
@@ -39,16 +38,14 @@ general {
     gaps_in=3
     gaps_out=6
     border_size=2
-    no_border_on_floating=false
+    layout=dwindle
     col.active_border=$ACT
     col.inactive_border=0x00000000
     col.group_border=0x00000000
     col.group_border_active=$ACT
+    no_border_on_floating=false
     apply_sens_to_raw=false
-    sensitivity=1
     resize_on_border=false
-    extend_border_grab_area=15
-    layout=dwindle
 }
 
 decoration {
@@ -84,17 +81,15 @@ animations {
 }
 
 dwindle {
-    pseudotile=false
+    smart_resizing=true
     preserve_split=true
-    no_gaps_when_only=false
     use_active_for_splits=true
-    special_scale_factor=0.8
-    split_width_multiplier=1.0
+    no_gaps_when_only=false
+    pseudotile=false
+    smart_split=false
 }
 
 misc {
-    disable_hyprland_logo=true
-    disable_splash_rendering=true
     vfr=true
     vrr=1
     layers_hog_keyboard_focus=true
@@ -104,6 +99,8 @@ misc {
     mouse_move_enables_dpms=true
     key_press_enables_dpms=true
     mouse_move_focuses_monitor=true
+    disable_hyprland_logo=true
+    disable_splash_rendering=false
     enable_swallow=false
     swallow_regex=^(kitty)$
 }
