--- a/configs/dotconfig/kitty/kitty.conf
+++ b/configs/dotconfig/kitty/kitty.conf
@@ -43,8 +43,12 @@ sync_to_monitor yes
 # terminal bell
 enable_audio_bell no
 
-# window padding
-window_padding_width 5
+# window
+window_padding_width 8
+window_margin_width 0
+draw_minimal_borders yes
+remember_window_size  yes
+placement_strategy top-left
 
 # kitty mod
 kitty_mod ctrl+shift
