--- a/configs/dotconfig/hypr/lib/rules.conf
+++ b/configs/dotconfig/hypr/lib/rules.conf
@@ -10,7 +10,7 @@
 # general float rules
 windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress)
 windowrulev2=float,title:([oO]pen|[uU]pload|[fF]ile|[eE]xport)
-windowrulev2=float,title:([iI]mport|[fF]ile|[dD]ownload)
+windowrulev2=float,title:([iI]mport|[fF]ile|[dD]ownloadi|[pP]roperties)
 windowrulev2=float,title:([pP]in|[pP]assword|[aA]uthentication)
 windowrulev2=float,title:^$
 
