--- a/configs/dotconfig/hypr/lib/main.conf
+++ b/configs/dotconfig/hypr/lib/main.conf
@@ -39,18 +39,19 @@ general {
     gaps_out=6
     border_size=2
     layout=dwindle
-    col.active_border=$ACT
-    col.inactive_border=0x00000000
-    col.group_border=0x00000000
-    col.group_border_active=$ACT
     no_border_on_floating=false
     apply_sens_to_raw=false
     resize_on_border=false
+    allow_tearing=true
+}
+
+group {
+    col.border_inactive=0x00000000
+    col.border_active=$ACT
 }
 
 decoration {
     rounding=0
-    multisample_edges=true
     drop_shadow=false
     dim_inactive=false
     dim_strength=0.25
