--- a/configs/dotconfig/hypr/lib/rules.conf
+++ b/configs/dotconfig/hypr/lib/rules.conf
@@ -35,3 +35,6 @@ windowrulev2=center,class:(),xwayland=0
 
 # idleinhibit rule for fullscreen
 windowrulev2=idleinhibit fullscreen,class:()
+
+# tearing for gamescope
+windowrulev2 = immediate, class:^(gamescope)$
