--- a/configs/dotconfig/.wayinitrc
+++ b/configs/dotconfig/.wayinitrc
@@ -10,5 +10,6 @@ export QT_WAYLAND_DISABLE_WINDOWDECORATION=1
 export QT_AUTO_SCREEN_SCALE_FACTOR=1
 export CLUTTER_BACKEND=wayland
 export MOZ_ENABLE_WAYLAND=1
+export WLR_DRM_NO_ATOMIC=1
 
-exec Hyprland
+exec Hyprland 1> /dev/null
