update docs and add ability for custom systemd services

--- a/configs/etc/dracut.conf
+++ b/configs/etc/dracut.conf
@@ -1,10 +1,12 @@
 uefi="yes"
 compress="lz4"
+hostonly="yes"
 force_drivers+=" amdgpu "
 add_dracutmodules+=" tpm2-tss "
-omit_dracutmodules+=" brltty network-legacy network nfs cifs iscsi nbd ssh-client "
+omit_dracutmodules+=" brltty mdraid bootchart dash busybox network-legacy network nfs dmsquash-live-ntfs multipath stratis cifs iscsi nbd ssh-client biosdevname btrfsi "
+stdloglvl="3"
 stdloglvl="3"
 show_modules="yes"
-kernel_cmdline="quiet amd_pstate.replace=1 amd_pstate=passive root=UUID=[UUID]"
+kernel_cmdline="quiet amd_pstate.replace=1 amd_pstate=active root=UUID=[UUID]"
 uefi_secureboot_cert="/usr/share/secureboot/keys/db/db.pem"
 uefi_secureboot_key="/usr/share/secureboot/keys/db/db.key"
