--- a/scripts/systemd/gamescope.service
+++ b/scripts/systemd/gamescope.service
@@ -3,6 +3,10 @@ Description=Gamescope Steam Session
 
 [Service]
 Type=simple
+Environment="XKBLAYOUT=at"
+Environment="XKBVARIANT=nodeadkeys"
+Environment="XKB_DEFAULT_LAYOUT=at"
+Environment="XKB_DEFAULT_VARIANT=nodeadkeys"
 ExecStart=/usr/bin/gamescope -e -w 2560 -h 1440 --expose-wayland --immediate-flips --adaptive-sync --hdr-enabled --rt
 Restart=always
 
