depreciate btop and make sure xsettingsd starts

--- a/configs/dotconfig/hypr/lib/exec.conf
+++ b/configs/dotconfig/hypr/lib/exec.conf
@@ -13,5 +13,6 @@ exec-once=hyprctl setcursor XCursor-Pro-Dark 4
 exec-once=/home/$USER/.config/hypr/scripts/xdg-portal.sh
 exec-once=/usr/lib/xfce-polkit/xfce-polkit
 exec-once=nwg-look -a
+exec-once=systemctl --user restart xsettingsd.service
 exec-once=easyeffects --gapplication-service
 exec=/home/$USER/.config/hypr/scripts/autostart.sh
