--- a/configs/dotconfig/kitty/kitty.conf
+++ b/configs/dotconfig/kitty/kitty.conf
@@ -6,8 +6,12 @@
 #                /____/
 
 # includes
-include ./colors.conf
-include ~/.cache/wal/colors-kitty.conf
+include kitty-colors.conf
+
+# base color
+selection_background  #f0f0f0
+selection_foreground  #101010
+background_opacity    0.95
 
 # fonts
 font_family      Source Code Pro
