update hyprland config

--- a/configs/dotconfig/hypr/lib/main.conf
+++ b/configs/dotconfig/hypr/lib/main.conf
@@ -15,11 +15,16 @@ source=./exec.conf
 
 input {
 	touchpad {
-        natural_scroll=no
+        natural_scroll=false
+        scroll_factor=0.8
         disable_while_typing=true
+    }
+    touchdevice {
+        enabled=false
     }
     sensitivity=0
     follow_mouse=1
+    mouse_refocus=false
     repeat_rate=25
     repeat_delay=300
     accel_profile=flat
@@ -59,18 +64,21 @@ decoration {
     inactive_opacity=1.0
     blur {
         enabled=true
-        size=8
+        size=10
         passes=1
         new_optimizations=true
-        xray=false
-        noise=0.05
-        contrast=0.8
-        brightness=0.8
+        xray=true
+        noise=0.1
+        contrast=0.7
+        brightness=0.7
+        vibrancy=0.15
+        vibrancy_darkness=0.15
     }
 }
 
 animations {
     enabled=true
+    first_launch_animation=false
     bezier=norm,0.05,0.9,0.1,1
     bezier=out,0.3,0,0.6,-0.2
     bezier=in,0.3,1,0.5,1
@@ -104,6 +112,7 @@ misc {
     disable_splash_rendering=false
     enable_swallow=false
     swallow_regex=^(kitty)$
+    no_direct_scanout=true
 }
 
 binds {
