--- a/configs/dotconfig/hypr/lib/rules.conf
+++ b/configs/dotconfig/hypr/lib/rules.conf
@@ -37,4 +37,4 @@ windowrulev2=center,class:(),xwayland=0
 windowrulev2=idleinhibit fullscreen,class:()
 
 # tearing for gamescope
-windowrulev2 = immediate, class:^(gamescope)$
+windowrulev2 = immediate, class:(gamescope|gamescope-wl)
