--- a/configs/dotconfig/.wayinitrc
+++ b/configs/dotconfig/.wayinitrc
@@ -9,6 +9,7 @@ export QT_QPA_PLATFORM="wayland;xcb"
 export QT_WAYLAND_DISABLE_WINDOWDECORATION=1
 export QT_AUTO_SCREEN_SCALE_FACTOR=1
 export CLUTTER_BACKEND=wayland
+export ELECTRON_OZONE_PLATFORM_HINT=auto
 export WLR_DRM_NO_ATOMIC=1
 
 exec Hyprland 1> /dev/null
