switch to hyprlock and update packages

--- a/configs/dotconfig/hypr/lib/binds.conf
+++ b/configs/dotconfig/hypr/lib/binds.conf
@@ -17,8 +17,8 @@ $SCRIPT_PATH=/home/$USER/.config/scripts
 bind=SUPER,Return,exec,kitty
 bind=SUPER,Q,exec,caja
 bind=SUPER,A,exec,rofi -show run
-bind=SUPER,L,exec,$WAY_SCRIPT_PATH/swaylock.sh
-bind=SUPERSHIFT,S,exec,$WAY_SCRIPT_PATH/takeWayScreen.sh
+bind=SUPER,L,exec,hyprlock
+bind=SUPERSHIFT,S,exec,$WAY_SCRIPT_PATH/screenshot.sh
 bind=SUPERSHIFT,Q,exec,eww open-many --toggle powermenu-blur powermenu
 bind=SUPERSHIFT,A,exec,rofi -show calc
 
