change hyprlock to include batt percentage

--- a/configs/dotconfig/hypr/hyprlock.conf
+++ b/configs/dotconfig/hypr/hyprlock.conf
@@ -4,8 +4,8 @@ source=/home/$USER/.cache/rwpspread/rwps_hyprlock.conf
 # clock on all monitors
 label {
     monitor =
-    text = cmd[update:10000] date "+%H:%M"
-    color = #FFFFFF
+    text = cmd[update:45000] date "+%H:%M"
+    color = rgb(255, 255, 255)
     font_size = 64
     font_family = Open Sans Bold
     position = 0, -150
@@ -17,7 +17,7 @@ label {
 label {
     monitor =
     text = cmd[update:1800000] date "+%A, %d %B"
-    color = #FFFFFF
+    color = rgb(255, 255, 255)
     font_size = 14
     font_family = Open Sans Semibold
     position = 0, -250
@@ -25,20 +25,32 @@ label {
     valign = top
 }
 
+# battery label on all monitors
+label {
+    monitor =
+    text = cmd[update:450000] echo "$(/home/$USER/.config/scripts/bat.sh percent)"
+    color = rgb(255, 255, 255)
+    font_size = 14
+    font_family = Open Sans Semibold
+    position = 0, -65
+    halign = center
+    valign = bottom
+}
+
 # input field on all monitors
 input-field {
     monitor =
-    size = 160, 40
+    size = 130, 30
     outline_thickness = 0
-    inner_color = #FFFFFF
-    font_color = #222222
-    check_color = #EEDD00
-    fail_color = #EE0000
+    inner_color = rgb(255, 255, 255)
+    font_color = rgb(40, 40, 40)
+    check_color = rgb(255, 255, 255)
+    fail_color = rgb(220, 0, 0)
     fade_timeout = 500
     fail_transition = 250
     placeholder_text = <b>...</b>
     fail_text = <b>Failed ($ATTEMPTS)</b>
-    rounding = 16
+    rounding = 15
     dots_rounding = -1
     dots_center = true
     position = 0, 20
