fix config due to hyprland changes

--- a/configs/dotconfig/hypr/example.conf
+++ b/configs/dotconfig/hypr/example.conf
@@ -5,7 +5,7 @@
 # /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\__,_/_/ /_/\__,_/
 #                              /____/_/
 
-### COLORS ###
+# COLORS
 
 $FGD=0xFF000000
 $BGD=0xFF000000
@@ -13,11 +13,11 @@ $NRM=0xFF000000
 $ACT=0xFF000000
 $URG=0xFF000000
 
-### INPUTS ###
+# INPUTS
 
 # def
 monitor=,highrr,auto,1
 
-### IMPORTS ###
+# IMPORTS
 
 source=./lib/main.conf
