--- a/configs/dotconfig/hypr/lib/main.conf
+++ b/configs/dotconfig/hypr/lib/main.conf
@@ -5,13 +5,13 @@
 # /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\__,_/_/ /_/\__,_/
 #                              /____/_/
 
-### IMPORTS ###
+# IMPORTS
 
 source=./rules.conf
 source=./binds.conf
 source=./exec.conf
 
-### MAIN ###
+# MAIN
 
 input {
 	touchpad {
