--- a/configs/dotconfig/hypr/lib/rules.conf
+++ b/configs/dotconfig/hypr/lib/rules.conf
@@ -5,7 +5,7 @@
 # /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\__,_/_/ /_/\__,_/
 #                              /____/_/
 
-### WINDOW RULES ###
+# WINDOW RULES
 
 # general float rules
 windowrulev2=float,title:([cC]ompress|[eE]xtract|[pP]rogress)
