--- a/configs/dotconfig/hypr/lib/binds.conf
+++ b/configs/dotconfig/hypr/lib/binds.conf
@@ -5,13 +5,13 @@
 # /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\__,_/_/ /_/\__,_/
 #                              /____/_/
 
-### VARS ###
+# VARS
 
 # script paths
 $WAY_SCRIPT_PATH=/home/$USER/.config/scripts/wayland
 $SCRIPT_PATH=/home/$USER/.config/scripts
 
-### BINDS ###
+# BINDS
 
 # app binds
 bind=SUPER,Return,exec,kitty
