--- a/configs/dotconfig/hypr/lib/exec.conf
+++ b/configs/dotconfig/hypr/lib/exec.conf
@@ -5,7 +5,7 @@
 # /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\__,_/_/ /_/\__,_/
 #                              /____/_/
 
-### AUTOSTART ###
+# AUTOSTART
 
 exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
