fix some hyprlock and autostart oversights

--- a/configs/dotconfig/hypr/hyprlock.conf
+++ b/configs/dotconfig/hypr/hyprlock.conf
@@ -4,7 +4,7 @@ source=/home/$USER/.cache/rwpspread/rwps_hyprlock.conf
 # clock on all monitors
 label {
     monitor =
-    text = cmd[update:45000] date "+%H:%M"
+    text = cmd[update:15000] date "+%H:%M"
     color = rgb(255, 255, 255)
     font_size = 64
     font_family = Open Sans Bold
@@ -16,7 +16,7 @@ label {
 # date label on all monitors
 label {
     monitor =
-    text = cmd[update:1800000] date "+%A, %d %B"
+    text = cmd[update:15000] date "+%A, %d %B"
     color = rgb(255, 255, 255)
     font_size = 14
     font_family = Open Sans Semibold
