add zoxide and tweaks

--- a/configs/dotconfig/hypr/lib/main.conf
+++ b/configs/dotconfig/hypr/lib/main.conf
@@ -82,6 +82,7 @@ animations {
     bezier=norm,0.05,0.9,0.1,1
     bezier=out,0.3,0,0.6,-0.2
     bezier=in,0.3,1,0.5,1
+    animation=layers,0
     animation=windows,1,4,norm,popin
     animation=windowsOut,1,4,out,popin
     animation=windowsMove,1,4,default
