--- a/configs/dotconfig/.wayinitrc
+++ b/configs/dotconfig/.wayinitrc
@@ -11,5 +11,6 @@ export QT_AUTO_SCREEN_SCALE_FACTOR=1
 export CLUTTER_BACKEND=wayland
 export ELECTRON_OZONE_PLATFORM_HINT=auto
 export WLR_DRM_NO_ATOMIC=1
+export MOZ_ENABLE_WAYLAND=1
 
 exec Hyprland 1> /dev/null
