add hyprland plugins and adjust electron flags

--- a/configs/dotconfig/hypr/lib/plugins.conf
+++ b/configs/dotconfig/hypr/lib/plugins.conf
@@ -5,19 +5,18 @@
 # /_/|_/_/_/  \____/     /_/ /_/\__, / .___/_/  /_/\__,_/_/ /_/\__,_/
 #                              /____/_/
 
-# COLORS
+# PLUGINS
 
-$FGD=0xFF000000
-$BGD=0xFF000000
-$NRM=0xFF000000
-$ACT=0xFF000000
-$URG=0xFF000000
-
-# INPUTS
-
-# def
-monitor=,highres,auto,1
-
-# IMPORTS
-
-source=./lib/main.conf
+# hyprexpo
+bind = SUPER, X, hyprexpo:expo, toggle
+plugin {
+    hyprexpo {
+        columns = 3
+        gap_size = 5
+        bg_col = rgb(111111)
+        workspace_method = first m+1
+        enable_gesture = true
+        gesture_distance = 300
+        gesture_positive = true
+    }
+}
