--- a/configs/dotconfig/.wayinitrc
+++ b/configs/dotconfig/.wayinitrc
@@ -1,8 +1,11 @@
-#!/bin/sh
+#!/bin/bash
 
 export XDG_SESSION_DESKTOP=Hyprland
 export XDG_SESSION_TYPE=wayland
-export XCURSOR_SIZE=4
+export HYPRCURSOR_THEME=XCursor-Pro-Dark-Hyprcursor
+export HYPRCURSOR_SIZE=24
+export XCURSOR_THEME=XCursor-Pro-Dark
+export XCURSOR_SIZE=24
 export _JAVA_AWT_WM_NONREPARENTING=1
 export QT_STYLE_OVERRIDE=kvantum
 export QT_QPA_PLATFORM="wayland;xcb"
