switch to hycov from hyprexpo

--- a/configs/dotconfig/hypr/lib/plugins.conf
+++ b/configs/dotconfig/hypr/lib/plugins.conf
@@ -7,16 +7,23 @@
 
 # PLUGINS
 
-# hyprexpo
-bind = SUPER, X, hyprexpo:expo, toggle
+# hycov
+bind = ALT, tab, hycov:toggleoverview
 plugin {
-    hyprexpo {
-        columns = 3
-        gap_size = 5
-        bg_col = rgb(111111)
-        workspace_method = first m+1
+    hycov {
+        overview_gappo = 6
+        overview_gappi = 3
+        swipe_fingers = 4
+        move_focus_distance = 100
+        enable_hotarea = false
         enable_gesture = true
-        gesture_distance = 300
-        gesture_positive = true
+        auto_exit = true
+        auto_fullscreen = false
+        only_active_workspace = false
+        only_active_monitor = true
+        enable_alt_release_exit = true
+        alt_toggle_auto_next = false
+        click_in_cursor = true
+        show_special = false
     }
 }
