adjust hyprlock config

--- a/configs/dotconfig/hypr/hyprlock.conf
+++ b/configs/dotconfig/hypr/hyprlock.conf
@@ -8,11 +8,19 @@
 # include generated rwpspread images
 source=/home/$USER/.cache/rwpspread/rwps_hyprlock.conf 
 
+# general config
+general {
+    hide_cursor = true
+    disable_loading_bar = true
+    ignore_empty_input = true
+}
+
 # clock on all monitors
 label {
     monitor =
-    text = cmd[update:15000] date "+%H:%M"
-    color = rgb(255, 255, 255)
+    text = cmd[update:15000] date "+%R"
+    text_align = center
+    color = rgb(ffffff)
     font_size = 64
     font_family = Open Sans Bold
     position = 0, -150
@@ -24,7 +32,8 @@ label {
 label {
     monitor =
     text = cmd[update:15000] date "+%A, %d %B"
-    color = rgb(255, 255, 255)
+    text_align = center
+    color = rgb(ffffff)
     font_size = 14
     font_family = Open Sans Semibold
     position = 0, -250
@@ -36,7 +45,8 @@ label {
 label {
     monitor =
     text = cmd[update:450000] echo "$(/home/$USER/.config/scripts/bat.sh percent)"
-    color = rgb(255, 255, 255)
+    text_align = center
+    color = rgb(ffffff)
     font_size = 14
     font_family = Open Sans Semibold
     position = 0, -65
@@ -47,18 +57,21 @@ label {
 # input field on all monitors
 input-field {
     monitor =
+    inner_color = rgb(dddddd)
+    outer_color = rgb(dddddd)
+    font_color = rgb(000000)
+    check_color = rgb(dddddd)
+    fail_color = rgb(aa0000)
+    capslock_color = rgb(dddd00)
+    swap_font_color = false
+    placeholder_text = <i></i>
+    fail_text = <i></i>
+    fail_transition = 250
+    fade_timeout = 250
+    fade_on_empty = true
     size = 130, 30
     outline_thickness = 0
-    inner_color = rgb(255, 255, 255)
-    font_color = rgb(40, 40, 40)
-    check_color = rgb(255, 255, 255)
-    fail_color = rgb(220, 0, 0)
-    fade_timeout = 500
-    fail_transition = 250
-    placeholder_text = <b>...</b>
-    fail_text = <b>Failed ($ATTEMPTS)</b>
     rounding = 15
-    dots_rounding = -1
     dots_center = true
     position = 0, 20
     halign = center
