change mono font

--- a/configs/dotconfig/kitty/kitty.conf
+++ b/configs/dotconfig/kitty/kitty.conf
@@ -14,10 +14,10 @@ selection_foreground  #101010
 background_opacity    0.93
 
 # fonts
-font_family      Source Code Pro
-bold_font        Source Code Pro Bold
-italic_font      Source Code Pro Italic
-bold_italic_font Source Code Pro Bold Italic
+font_family      Monaspace Neon
+bold_font        Monaspace Neon Bold
+italic_font      Monaspace Neon Italic
+bold_italic_font Monaspace Neon Bold Italic
 font_size 15
 
 # cursor theme
