fix some eww widgets and change font

--- a/configs/dotconfig/kitty/kitty.conf
+++ b/configs/dotconfig/kitty/kitty.conf
@@ -14,9 +14,9 @@ selection_foreground  #101010
 background_opacity    0.93
 
 # fonts
-font_family      Monaspace Neon
+font_family      Monaspace Neon Medium
 bold_font        Monaspace Neon Bold
-italic_font      Monaspace Neon Italic
+italic_font      Monaspace Neon Medium Italic
 bold_italic_font Monaspace Neon Bold Italic
 font_size 15
 
