add alacritty and modify themer and kitty conf

--- a/configs/dotconfig/kitty/kitty.conf
+++ b/configs/dotconfig/kitty/kitty.conf
@@ -9,16 +9,20 @@
 include kitty-colors.conf
 
 # base color
-selection_background  #f0f0f0
-selection_foreground  #101010
-background_opacity    0.93
+selection_background #f0f0f0
+selection_foreground #101010
+background_opacity 0.93
 
 # fonts
-font_family      Monaspace Neon Medium
-bold_font        Monaspace Neon Bold
-italic_font      Monaspace Neon Medium Italic
+font_family Monaspace Neon Medium
+bold_font Monaspace Neon Bold
+italic_font Monaspace Neon Medium Italic
 bold_italic_font Monaspace Neon Bold Italic
-font_size 15
+font_features MonaspaceNeon-Medium +liga -calt
+font_features MonaspaceNeon-Bold +liga -calt
+font_features MonaspaceNeon-BoldItalic +liga -calt
+font_features MonaspaceNeon-MediumItalic +liga -calt
+font_size 15.0
 
 # cursor theme
 cursor_shape underline
@@ -26,7 +30,7 @@ cursor_underline_thickness 1.5
 
 # cursor blinking
 cursor_stop_blinking_after 5
-cursor_blink_interval 0.3
+cursor_blink_interval 0.4
 
 # keep 2000 lines in memory
 scrollback_lines 2000
@@ -48,18 +52,21 @@ sync_to_monitor yes
 enable_audio_bell no
 
 # window
-window_padding_width 8
-window_margin_width 0
-draw_minimal_borders yes
-remember_window_size  yes
-placement_strategy top-left
+window_padding_width 7 7
+window_margin_width 0 0
+single_window_margin_width 0 0
+hide_window_decorations yes
+draw_minimal_borders no
+remember_window_size no
+placement_strategy center
+resize_in_steps yes
 
 # kitty mod
 kitty_mod ctrl+shift
 
 # keybinds
 map kitty_mod+c copy_to_clipboard
-map kitty_mod+v  paste_from_clipboard
+map kitty_mod+v paste_from_clipboard
 
 # shell integration
 shell_integration disabled
