--- a/configs/dotconfig/hypr/lib/exec.conf
+++ b/configs/dotconfig/hypr/lib/exec.conf
@@ -9,7 +9,7 @@
 
 exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=systemctl --user import-environment DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once=hyprpm reload -n
+#exec-once=hyprpm reload -n
 exec-once=/home/$USER/.config/hypr/scripts/xdg-portal.sh
 exec-once=/usr/lib/mate-polkit/polkit-mate-authentication-agent-1
 exec-once=nwg-look -a
