switch to english layout and adjust some binds

--- a/configs/dotconfig/hypr/lib/binds.conf
+++ b/configs/dotconfig/hypr/lib/binds.conf
@@ -71,6 +71,7 @@ bind=,XF86Calculator,exec,rofi -show calc
 binde=,XF86AudioLowerVolume,exec,$SCRIPT_PATH/volume.sh sink-incr "-" "2"
 binde=,XF86AudioRaiseVolume,exec,$SCRIPT_PATH/volume.sh sink-incr "+" "2"
 bind=,XF86AudioMute,exec,$SCRIPT_PATH/volume.sh sink-mute
+bind=,XF86Mail,exec,$SCRIPT_PATH/volume.sh source-mute
 bind=,XF86AudioNext,exec,$SCRIPT_PATH/media.sh next
 bind=,XF86AudioPrev,exec,$SCRIPT_PATH/media.sh prev
 bind=,XF86AudioPlay,exec,$SCRIPT_PATH/media.sh pp
