--- a/configs/dotconfig/hypr/lib/main.conf
+++ b/configs/dotconfig/hypr/lib/main.conf
@@ -29,7 +29,7 @@ input {
     repeat_rate=25
     repeat_delay=300
     accel_profile=flat
-    kb_layout=at
+    kb_layout=en
     kb_variant=nodeadkeys
     numlock_by_default=true
     natural_scroll=false
