try to fix some audio issues again

--- a/configs/dotconfig/wireplumber/wireplumber.conf.d/51-sample-sc360.conf
+++ b/configs/dotconfig/wireplumber/wireplumber.conf.d/51-sample-sc360.conf
@@ -2,12 +2,12 @@ monitor.alsa.rules = [
   {
     matches = [
       {
-        alsa.card_name = "Sharkoon Gaming DAC Pro S"
+        alsa.card_name = "the t.bone SC 360 USB"
       }
     ]
     actions = {
       update-props = {
-        audio.rate = 96000
+        audio.rate = 48000
         audio.format = "S24_3LE"
       }
     }
