--- a/scripts/systemd/gamescope.service
+++ b/scripts/systemd/gamescope.service
@@ -3,10 +3,8 @@ Description=Gamescope Steam Session
 
 [Service]
 Type=simple
-Environment="XKBLAYOUT=at"
-Environment="XKBVARIANT=nodeadkeys"
-Environment="XKB_DEFAULT_LAYOUT=at"
-Environment="XKB_DEFAULT_VARIANT=nodeadkeys"
+Environment="XKBLAYOUT=us"
+Environment="XKB_DEFAULT_LAYOUT=us"
 ExecStart=/usr/bin/gamescope -w 2560 -h 1440 --steam --immediate-flips --adaptive-sync --rt
 Restart=always
 
