adjust audio for new DAC

--- a/configs/dotconfig/wireplumber/wireplumber.conf.d/51-disable-suspension.conf
+++ b/configs/dotconfig/wireplumber/wireplumber.conf.d/51-disable-suspension.conf
@@ -11,6 +11,8 @@ monitor.alsa.rules = [
     actions = {
       update-props = {
         session.suspend-timeout-seconds = 0
+        dither.method = "wannamaker3",
+        dither.noise = 2
       }
     }
   }
@@ -29,6 +31,8 @@ monitor.bluez.rules = [
     actions = {
       update-props = {
         session.suspend-timeout-seconds = 0
+        dither.method = "wannamaker3",
+        dither.noise = 2
       }
     }
   }
