--- a/configs/dotconfig/pipewire/pipewire.conf.d/rate.conf
+++ b/configs/dotconfig/pipewire/pipewire.conf.d/rate.conf
@@ -1,4 +1,4 @@
 context.properties = {
-  default.clock.rate = 96000
-  default.clock.allowed-rates = [ 96000 ]
+  default.clock.rate = 192000
+  default.clock.allowed-rates = [ 44100, 48000, 96000, 192000 ]
 }
