change package doc and rofi config

--- a/configs/dotconfig/hypr/lib/binds.conf
+++ b/configs/dotconfig/hypr/lib/binds.conf
@@ -21,6 +21,7 @@ bind=SUPER,L,exec,hyprlock
 bind=SUPERSHIFT,S,exec,$WAY_SCRIPT_PATH/screenshot.sh
 bind=SUPERSHIFT,Q,exec,eww open-many --toggle powermenu-blur powermenu
 bind=SUPERSHIFT,A,exec,rofi -show calc
+bind=SUPERSHIFT,E,exec,rofi -show emoji -emoji-mode copy
 
 # wm mod binds
 bindm=SUPER,mouse:272,movewindow
