add yazi keybind

--- a/configs/dotconfig/hypr/lib/binds.conf
+++ b/configs/dotconfig/hypr/lib/binds.conf
@@ -18,6 +18,7 @@ bind=SUPER,Return,exec,kitty
 bind=SUPER,Q,exec,caja
 bind=SUPER,A,exec,rofi -show run
 bind=SUPER,L,exec,hyprlock
+bind=SUPER,T,exec,kitty yazi
 bind=SUPERSHIFT,S,exec,$WAY_SCRIPT_PATH/screenshot.sh
 bind=SUPERSHIFT,Q,exec,eww open-many --toggle powermenu-blur powermenu
 bind=SUPERSHIFT,A,exec,rofi -show calc
