--- a/configs/dotconfig/.wayinitrc
+++ b/configs/dotconfig/.wayinitrc
@@ -1,5 +1,6 @@
 #!/bin/bash
 
+export XDG_CURRENT_DESKTOP=Hyprland
 export XDG_SESSION_DESKTOP=Hyprland
 export XDG_SESSION_TYPE=wayland
 export XDG_CACHE_HOME=$HOME/.cache
@@ -17,9 +18,8 @@ export QT_WAYLAND_DISABLE_WINDOWDECORATION=1
 export QT_AUTO_SCREEN_SCALE_FACTOR=1
 export CLUTTER_BACKEND=wayland
 export ELECTRON_OZONE_PLATFORM_HINT=auto
-export WLR_DRM_NO_ATOMIC=1
+export GDK_BACKEND="wayland,x11,*"
 export MOZ_ENABLE_WAYLAND=1
 
-echo "Starting Session..."
 echo "" > .wayinit.log
 exec Hyprland 1> /dev/null 2> .wayinit.log
