--- a/configs/dotconfig/hypr/lib/rules.conf
+++ b/configs/dotconfig/hypr/lib/rules.conf
@@ -15,7 +15,7 @@ windowrulev2=float,title:([pP]in|[pP]assword|[aA]uthentication)
 windowrulev2=float,title:^$
 
 # app specific float rules
-windowrulev2=float,class:^([sS]ignal)$
+windowrulev2=float,initialTitle:^([sS]ignal)$
 windowrulev2=float,class:^(org.telegram.desktop)$
 windowrulev2=float,class:(fstl-app)
 windowrulev2=float,class:(ristretto)
