--- a/configs/dotconfig/hypr/hypridle.conf
+++ b/configs/dotconfig/hypr/hypridle.conf
@@ -1,20 +1,21 @@
 general {
+    lock_cmd = pidof hyprlock || hyprlock
     ignore_dbus_inhibit = false
 }
 
 listener {
     timeout = 15
-    on-timeout = if pgrep -x hyprlock; then hyprctl dispatch dpms off; fi
+    on-timeout = pidof hyprlock && sleep 1 && hyprctl dispatch dpms off
     on-resume = hyprctl dispatch dpms on
 }
 
 listener {
     timeout = 300
-    on-timeout = if ! pgrep -x hyprlock; then hyprlock; fi
+    on-timeout = loginctl lock-session
 }
 
 listener {
-    timeout = 330
-    on-timeout = hyprctl dispatch dpms off
-    on-resume = hyprctl dispatch dpms on
+    timeout = 315
+    on-timeout = sleep 1 && hyprctl dispatch dpms off
+    on-resume = sleep 1 && hyprctl dispatch dpms on
 }
