try to fix hypridle commands

--- a/configs/dotconfig/hypr/hypridle.conf
+++ b/configs/dotconfig/hypr/hypridle.conf
@@ -6,7 +6,7 @@ general {
 listener {
     timeout = 15
     on-timeout = pidof hyprlock && sleep 1 && hyprctl dispatch dpms off
-    on-resume = hyprctl dispatch dpms on
+    on-resume = pidof hyprlock && sleep 1 && hyprctl dispatch dpms on
 }
 
 listener {
@@ -16,6 +16,6 @@ listener {
 
 listener {
     timeout = 315
-    on-timeout = sleep 1 && hyprctl dispatch dpms off
-    on-resume = sleep 1 && hyprctl dispatch dpms on
+    on-timeout = pidof hyprlock && sleep 1 && hyprctl dispatch dpms off
+    on-resume = pidof hyprlock && sleep 1 && hyprctl dispatch dpms on
 }
