--- a/configs/dotconfig/alacritty/alacritty.toml
+++ b/configs/dotconfig/alacritty/alacritty.toml
@@ -1,11 +1,11 @@
-#          __                _ __  __              __  ___________ 
+#          __                _ __  __              __  ___________
 #   ____ _/ /___ ___________(_) /_/ /___  __      / /_<  / __/ __ \
 #  / __ `/ / __ `/ ___/ ___/ / __/ __/ / / /_____/ //_/ / /_/ / / /
-# / /_/ / / /_/ / /__/ /  / / /_/ /_/ /_/ /_____/ ,< / / __/ /_/ / 
-# \__,_/_/\__,_/\___/_/  /_/\__/\__/\__, /     /_/|_/_/_/  \____/  
-#                                  /____/                          
-# 
+# / /_/ / / /_/ / /__/ /  / / /_/ /_/ /_/ /_____/ ,< / / __/ /_/ /
+# \__,_/_/\__,_/\___/_/  /_/\__/\__/\__, /     /_/|_/_/_/  \____/
+#                                  /____/
 
+[general]
 import = [ "~/.config/alacritty/alacritty-colors.toml" ]
 ipc_socket = false
 
