--- a/configs/dotconfig/hypr/hypridle.conf
+++ b/configs/dotconfig/hypr/hypridle.conf
@@ -1,6 +1,7 @@
 general {
     lock_cmd = pidof hyprlock || hyprlock
     ignore_dbus_inhibit = false
+    ignore_systemd_inhibit = false
 }
 
 listener {
