--- a/configs/dotconfig/hypr/lib/main.conf
+++ b/configs/dotconfig/hypr/lib/main.conf
@@ -55,11 +55,18 @@ group {
 
 decoration {
     rounding=0
-    drop_shadow=false
     dim_inactive=false
     dim_strength=0.25
     active_opacity=1.0
     inactive_opacity=1.0
+    shadow {
+        enabled=true
+        range=10
+        sharp=false
+        render_power=4
+        color=$ACT
+        color_inactive=0x00000000
+    }
     blur {
         enabled=true
         size=10
@@ -77,24 +84,29 @@ decoration {
 animations {
     enabled=true
     first_launch_animation=false
-    bezier=norm,0.05,0.9,0.1,1
-    bezier=out,0.3,0,0.6,-0.2
-    bezier=in,0.3,1,0.5,1
+    bezier=uni,0.05,0.9,0.1,1
+    bezier=fde,0.3,1,0.5,1
     animation=layers,0
-    animation=windows,1,4,norm,popin
-    animation=windowsOut,1,4,out,popin
-    animation=windowsMove,1,4,default
-    animation=fade,1,4,in
-    animation=workspaces,1,4,norm,slide
+    animation=border,0
+    animation=borderangle,0
+    animation=windowsIn,1,3.5,fde,popin
+    animation=windowsOut,1,2.5,fde,popin
+    animation=windowsMove,1,3.5,default
+    animation=fade,1,3.5,uni
+    animation=fadeIn,1,3.5,fde
+    animation=fadeOut,1,2.5,fde
+    animation=workspaces,1,3.5,uni,slidefade
+    animation=workspacesIn,1,3.5,fde,slide
+    animation=workspacesOut,1,2.5,fde,slide
 }
 
 dwindle {
     smart_resizing=true
     preserve_split=true
     use_active_for_splits=true
-    no_gaps_when_only=false
     pseudotile=false
-    smart_split=false
+    smart_split=true
+    smart_resizing=true
 }
 
 misc {
@@ -109,5 +121,4 @@ misc {
     disable_hyprland_logo=true
     disable_splash_rendering=false
     enable_swallow=false
-    swallow_regex=^(kitty)$
 }
