--- a/configs/dotconfig/hypr/lib/main.conf
+++ b/configs/dotconfig/hypr/lib/main.conf
@@ -105,7 +105,7 @@ dwindle {
     preserve_split=true
     use_active_for_splits=true
     pseudotile=false
-    smart_split=true
+    smart_split=false
     smart_resizing=true
 }
 
